Crash when a curve object got an array modifier with a mesh object containing a vertex group set as cap #96494

Closed
opened 2022-03-15 14:06:48 +01:00 by Johannes Riegraf · 7 comments

System Information
Operating system: Windows 10
Graphics card: 4x RTX 3080ti

Blender Version
Broken: 3.0/3.1
Worked: 2.93

Caused by 3b6ee8cee7

Short description of error
Blender crashes when a curve object got an array modifier with a mesh object containing a vertex group set as cap.

Exact steps for others to reproduce the error

VertexGroup_Bug.blend

  • In attached file enable viewport for array modifier

  • With a new startup file add a curve and a mesh object. Create a vertex group for the mesh object. Select the curve object, add an array modifier and select as Cap Start (or Cap End) the mesh object.

**System Information** Operating system: Windows 10 Graphics card: 4x RTX 3080ti **Blender Version** Broken: 3.0/3.1 Worked: 2.93 Caused by 3b6ee8cee7 **Short description of error** Blender crashes when a curve object got an array modifier with a mesh object containing a vertex group set as cap. **Exact steps for others to reproduce the error** [VertexGroup_Bug.blend](https://archive.blender.org/developer/F12928718/VertexGroup_Bug.blend) - In attached file enable viewport for array modifier - With a new startup file add a curve and a mesh object. Create a vertex group for the mesh object. Select the curve object, add an array modifier and select as Cap Start (or Cap End) the mesh object.

Added subscriber: @wischmob

Added subscriber: @wischmob

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @HooglyBoogly, @PratikPB2123

Added subscribers: @HooglyBoogly, @PratikPB2123
Member

Crash caused by 3b6ee8cee7
@HooglyBoogly ^

Crash caused by 3b6ee8cee7 @HooglyBoogly ^
Hans Goudey self-assigned this 2022-03-21 17:29:23 +01:00

This issue was referenced by c9290d23ca

This issue was referenced by c9290d23ca52a1d5986c21b3f947b7dd2e2de4b1

This issue was referenced by 923b28aab8

This issue was referenced by 923b28aab85768e2b4aff89494c321028252cf1e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96494
No description provided.